-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.10
-
None
-
Fedora 42, KDE Plasma
-
ce63fb9c4 (dev), a6ddbcddb (6.10)
My application regularly crashes with the following backtrace
#5 __strlen_avx2 () at ../sysdeps/x86_64/multiarch/strlen-avx2.S:76 #6 0x00007f403833c404 in std::char_traits<char>::length (__s=0x0) at /usr/include/c++/15/bits/char_traits.h:393 #7 std::basic_string_view<char, std::char_traits<char> >::basic_string_view (this=<optimized out>, __str=0x0) at /usr/include/c++/15/string_view:145 #8 QtPipeWire::QAudioContextManager::handleMetadata (this=0x7f40383fef60 <QGlobalStatic<QtGlobalStatic::Holder<QtPipeWire::(anonymous namespace)::Q_QGS_s_audioContextInstance> >::instance()::holder>, record=...) at /home/nico/workspace/qt6/qtmultimedia/src/multimedia/pipewire/qpipewire_audiocontextmanager.cpp:371 #9 0x00007f403833c7ae in operator() (__closure=0x0, data=<optimized out>, subject=<optimized out>, key=<optimized out>, type=<optimized out>, value=<optimized out>) at /home/nico/workspace/qt6/qtmultimedia/src/multimedia/pipewire/qpipewire_audiocontextmanager.cpp:291 #10 _FUN () at /home/nico/workspace/qt6/qtmultimedia/src/multimedia/pipewire/qpipewire_audiocontextmanager.cpp:296 #11 0x00007f3fdbf6e3ce in metadata_proxy_demarshal_property (object=<optimized out>, msg=<optimized out>) at ../src/modules/module-metadata/protocol-native.c:228 #12 0x00007f3fdbfc394c in process_remote (impl=impl@entry=0x2f48abe0) at ../src/modules/module-protocol-native.c:1095 #13 0x00007f3fdbfc3ff8 in on_remote_data (data=0x2f48abe0, fd=29, mask=1) at ../src/modules/module-protocol-native.c:1129 #14 0x00007f401af047c6 in loop_iterate (object=<optimized out>, timeout=<optimized out>) at ../spa/plugins/support/loop.c:726 #15 0x00007f402ec9eb34 in spa_loop_control_iterate_fast (object=<optimized out>, timeout=-1) at ../spa/include/spa/support/loop.h:312 #16 pw_loop_iterate (object=<optimized out>, timeout=-1) at ../src/pipewire/loop.h:89 #17 do_loop (user_data=0x2f5e6350) at ../src/pipewire/thread-loop.c:294 #18 0x00007f403427f1d4 in start_thread (arg=<optimized out>) at pthread_create.c:448 #19 0x00007f4034301cec in __GI___clone3 () at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:78
It happens while the app is running in the background, so I can't really tell right now what it's doing before it crashes
For Gerrit Dashboard: QTBUG-138197 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
658101,3 | Pipewire: metadata listener - clear defaults when null key received | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |
658504,2 | Pipewire: metadata listener - clear defaults when null key received | 6.10 | qt/qtmultimedia | Status: MERGED | +2 | 0 |