Pipewire: metadata listener - clear defaults when null key received

According to pipewire's documentation, setting a nullptr key clears all
metadata.

Fixes: QTBUG-138197
Change-Id: I2f09625a6691004f5002484739217c657b4efd19
Reviewed-by: Mikko Hallamaa <mikko.hallamaa@qt.io>
Reviewed-by: Timur Pocheptsov <timur.pocheptsov@qt.io>
(cherry picked from commit ce63fb9c4e6c191cccc616219c32684cda4e41bb)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>